Version 0.16.1 (2022-01-08)
- Use helper for device_name
- Add logging to show usage of unique_id in name
- Add HmIPW-WRC6 to custom entities

Version 0.16.0 (2022-01-08)
- Return unique_id if name is not in cache
- Remove no longer needed press_virtual_remote_key

Version 0.15.2 (2022-01-07)
- Add devices to CustomEntity
    - HmIP-WGC
    - HmIP-WHS
- Update to pydevccu 0.1.0

Version 0.15.1 (2022-01-07)
- Identify virtual remote by device type
- Fix Device Exporter / format output

Version 0.15.0 (2022-01-07)
- Use actions instead of buttons for virtual remotes

Version 0.14.1 (2022-01-06)
- Remove SVs from EXCLUDED_FROM_SENSOR

Version 0.14.0 (2022-01-06)
- Switch some HM-LC-Bl1 to cover
- Use decorators on central methods
- Make decorators async aware
- Don't exclude DutyCycle, needed for old rf-modules
- Don't exclude Watchdog from SV sensor
- Ignore mypy error

Version 0.13.3 (2022-01-05)
- HM cover fix: check level for None
- Only device_address is required for HA callback
- Fix: max_temp issue for hm thermostats
- Fix: hm const are str instead of int

Version 0.13.2 (2022-01-04)
- Fix cover state
- Move delete_devices from RPCFunctions to central
- Move new_devices from RPCFunctions to central
- Add method to delete a single device to central

Version 0.13.1 (2022-01-04)
- Use generic climate profiles list

Version 0.13.0 (2022-01-04)
- Remove dedicated json tls option
- Fix unique_id for heating_groups
- Use domain name as base folder name
- Remove domain const from hahomematic

Version 0.12.0 (2022-01-03)
- Split number to integer and float

Version 0.11.2 (2022-01-02)
- Precise entity definitions

Version 0.11.1 (2022-01-02)
- Improve detection of multi channel devices

Version 0.11.0 (2022-01-02)
- Add positional arguments
- Add missing channel no
- Set ED_PHY_CHANNEL min_length to 1
- Add platform zu hub entities
- Use entities in properties
- Add transition to dimmer
- Rename entity.state to entity.value