@@ -54,7 +54,7 @@ class CeCover(CustomEntity):
         unique_id: str,
         device_enum: EntityDefinition,
         device_def: dict[str, Any],
-        entity_def: dict[str, Any],
+        entity_def: dict[int, set[str]],
         channel_no: int,
     ):
         super().__init__(
@@ -194,7 +194,7 @@ class CeGarage(CustomEntity):
         unique_id: str,
         device_enum: EntityDefinition,
         device_def: dict[str, Any],
-        entity_def: dict[str, Any],
+        entity_def: dict[int, set[str]],
         channel_no: int,
     ):
         super().__init__(
