@@ -38,7 +38,7 @@ class BaseLock(CustomEntity):
         unique_id: str,
         device_enum: EntityDefinition,
         device_def: dict[str, Any],
-        entity_def: dict[str, Any],
+        entity_def: dict[int, set[str]],
         channel_no: int,
     ):
         super().__init__(
