@@ -2,6 +2,11 @@ Version 0.16.1 (2022-01-08)
 - Use helper for device_name
 - Add logging to show usage of unique_id in name
 - Add HmIPW-WRC6 to custom entities
+- Add HmIP-SCTH230 to custom entities
+- Refactor entity definition
+    - Remove unnecessary field names from additional entity definitions
+    - Add additional entity definitions by device type
+
 
 Version 0.16.0 (2022-01-08)
 - Return unique_id if name is not in cache
